# viva-backend

./: .gitignore  README.md  docker-compose.middleware.yaml  poetry.toml  pyproject.toml  一指禅合集V2.0.html
src/: alembic.ini  model_type_mapper.yml  test.py
src/alembic/versions/: 042c0d16e188_init.py  0a33ee511af1_init.py  2fd68d167836_init.py  386c94eadc5a_init.py  3eae1985ad38_xxx.py  76d140c76b6d_init.py  792ed3543015_init.py  79eac3c96f7b_init.py  892aca382984_init.py  90e195e380ba_init.py  b2921637ea3c_init.py  ce3411afdfd5_init.py  d1c719bae1c3_init.py  fcc4dd00302f_init.py  fd774c49809e_init.py
src/config/: models.yaml  settings.py
src/database/: database.py  models.py
src/exceptions/: exception.py
src/llm_utils/: server_send_event_callback.py
src/schemas/: core.py  error_code.py
src/services/: common_service.py  model_service.py
src/services/interface_impl/: base.py  http_interface_impl.py
src/services/memory/: base.py  memory_providers.py
src/services/model_provider/: base.py  mapper.py  openai.py
src/utils/: app_register.py  deps.py  utils.py
src/viva_endpoint/: app.py  engine_service.py  main_router.py
src/viva_model_api/: app.py  main.py  models_router.py
src/viva_service_api/: app.py  app_router.py  category_router.py  dataset_router.py  models_router.py
